Bug 1009214 part 1 - [css-grid] Don't wrap placeholders in an anonymous grid item.  r=dholbert